objects/ssot__PersonExamination__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountContactId__c</fullName>
        <label>Account Contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Person Examination Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentPersonExaminationId__c</fullName>
        <label>Parent Person Examination</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScoreType__c</fullName>
        <label>Score Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectName__c</fullName>
        <label>Subject Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818174817_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonExamination_AccountContactId_m_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>PersonExamination_AccountContactId_m_rel</relationshipLabel>
        <relationshipName>rel_1719818174817_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819618273_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonExamination_ParentPersonExamin_rel</label>
        <referenceTo>ssot__PersonExamination__dlm</referenceTo>
        <relationshipLabel>PersonExamination_ParentPersonExamin_rel</relationshipLabel>
        <relationshipName>rel_1719819618273_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291164457_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PersonExamination_IndividualId_map_I_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>PersonExamination_IndividualId_map_I_rel</relationshipLabel>
        <relationshipName>rel_1720291164457_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>